- Add store store procedure to Alter table customer field password to VARCHAR 60 - Add ShippingRegion mapping - Add python to backend container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM node:10.15.3-alpine
 
 EXPOSE 3000
 
+RUN apk --no-cache add --virtual builds-deps build-base python
+
 RUN yarn global add nodemon sequelize-auto mysql
 
 ADD ./start.sh /start.sh
