--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@ DB_PORT=3306
 DB_MACHINE=mariadb
 SECRET=turing
 PORT=4000
+AWS_ACCESS_KEY_ID=AKIAQJOA2ABCPK3QABUU
+AWS_SECRET_ACCESS_KEY=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
