--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
 	"author": "rfreites",
 	"license": "MIT",
 	"scripts": {
-		"dev": "nodemon start.js 4000",
-		"start": "node start.js"
+		"dev": "nodemon app-entry.js 4000",
+		"start": "node app-entry.js",
+		"deploy": "serverless deploy"
 	},
 	"dependencies": {
 		"apollo-server": "2.4.8",
 		"apollo-server-express": "2.4.8",
+		"apollo-server-lambda": "^2.4.8",
 		"bcrypt": "3",
 		"body-parser": "1.18.3",
 		"cors": "2.8.5",
@@ -29,6 +31,10 @@
 		"merge-graphql-schemas": "1.5.8",
 		"morgan": "1.9.1",
 		"sequelize": "5.1.1",
+		"serverless": "^1.40.0",
+		"serverless-http": "^1.9.1",
+		"serverless-offline": "^4.9.2",
+		"serverless-webpack": "^5.2.0",
 		"uuid": "3.3.2"
 	},
 	"devDependencies": {
@@ -36,11 +42,15 @@
 		"@babel/node": "7.2.2",
 		"@babel/preset-env": "7.4.2",
 		"@babel/register": "7.4.0",
+		"babel-loader": "^8.0.5",
 		"eslint": "5.15.3",
 		"eslint-config-airbnb": "17.1.0",
 		"eslint-config-airbnb-base": "13.1.0",
 		"eslint-plugin-import": "2.16.0",
 		"eslint-plugin-jsx-a11y": "6.2.1",
-		"mocha": "6.0.2"
+		"mocha": "6.0.2",
+		"webpack": "^4.29.6",
+		"webpack-node-externals": "^1.7.2",
+		"graphql-playground-middleware-express": "^1.7.12"
 	}
 }
