add circleci backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 DB_HOST=database
 DB_DATABASE=turing
 DB_USER=turing
@@ -7,5 +7,11 @@ DB_PORT=3306
 DB_MACHINE=mariadb
 SECRET=turing
 PORT=4000
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=AKIAQJOA2ABCPK3QABUU
+AWS_SECRET_ACCESS_KEY=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
+DEPLOY_DB_HOST=db-instance-turing.cgtjekwuvtry.us-west-2.rds.amazonaws.com
+DEPLOY_DB_DATABASE=db-instance-turing
+DEPLOY_DB_USER=turing
+DEPLOY_DB_PASSWORD=dbturing
+DEPLOY_DB_PORT=3306
+SLS_DEBUG=*
