--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,24 @@
 		"deploy": "serverless deploy"
 	},
 	"dependencies": {
+		"@babel/core": "7.4.0",
+		"@babel/node": "7.2.2",
+		"@babel/preset-env": "7.4.2",
+		"@babel/register": "7.4.0",
 		"apollo-server": "2.4.8",
 		"apollo-server-express": "2.4.8",
 		"apollo-server-lambda": "^2.4.8",
+		"babel-loader": "^8.0.5",
 		"bcrypt": "3",
 		"body-parser": "1.18.3",
 		"cors": "2.8.5",
 		"dataloader": "1.4.0",
 		"dotenv": "7.0.0",
-		"express": "4.16.4",
+		"express": "^4.16.4",
 		"graphql": "14.1.1",
 		"graphql-import": "0.7.1",
 		"graphql-iso-date": "3.6.1",
+		"graphql-playground-middleware-express": "^1.7.12",
 		"graphql-resolvers": "0.3.2",
 		"graphql-tools": "4.0.4",
 		"http": "0.0.0",
@@ -30,27 +36,22 @@
 		"mariadb": "2.0.3",
 		"merge-graphql-schemas": "1.5.8",
 		"morgan": "1.9.1",
-		"sequelize": "5.1.1",
+		"mysql2": "^1.6.5",
+		"sequelize": "^5.2.8",
 		"serverless": "^1.40.0",
 		"serverless-http": "^1.9.1",
 		"serverless-offline": "^4.9.2",
 		"serverless-webpack": "^5.2.0",
-		"uuid": "3.3.2"
+		"uuid": "3.3.2",
+		"webpack": "^4.29.6",
+		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
-		"@babel/core": "7.4.0",
-		"@babel/node": "7.2.2",
-		"@babel/preset-env": "7.4.2",
-		"@babel/register": "7.4.0",
-		"babel-loader": "^8.0.5",
 		"eslint": "5.15.3",
 		"eslint-config-airbnb": "17.1.0",
 		"eslint-config-airbnb-base": "13.1.0",
 		"eslint-plugin-import": "2.16.0",
 		"eslint-plugin-jsx-a11y": "6.2.1",
-		"mocha": "6.0.2",
-		"webpack": "^4.29.6",
-		"webpack-node-externals": "^1.7.2",
-		"graphql-playground-middleware-express": "^1.7.12"
+		"mocha": "6.0.2"
 	}
 }
