--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 3307:3306
     volumes:
       - ./db-data/:/var/lib/mysql
+      - ./database/backup:/backup
+      - ./backend/.env:/.env
     # labels:
     #   - 'traefik.enable=false'
 
@@ -28,6 +30,7 @@ services:
     volumes:
       - /var/www/app/node_modules
       - ./backend:/var/www/app
+      - ./backend/.env:/.env
     depends_on:
       - database
     ports:
