fix sls deploy and set cicrcleci deploy

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,39 +1,22 @@
-FROM node:8.15.1-jessie
+FROM circleci/node:8.10
 
 EXPOSE 3000
 
-RUN set -ex; \
-  apt-get update; \
-  apt-get install -y --no-install-recommends \
-  python-pip \
-  curl
+RUN sudo apt-get update; \
+  sudo apt-get install -y --no-install-recommends \
+  python-pip
 
-RUN ln -sf /usr/share/zoneinfo/Etc/UTC /etc/localtime
+RUN sudo pip install --user --upgrade pip; \
+  sudo pip install --user awscli; \
+  sudo pip install --user awscli --upgrade
 
-RUN pip install --upgrade pip; \
-  pip install awscli; \
-  pip install awscli --upgrade
+RUN sudo npm install sequelize-auto mysql serverless sequelize -g
 
-RUN yarn global add nodemon sequelize-auto mysql serverless
-
-RUN curl -sf https://up.apex.sh/install | BINDIR=/usr/local/bin/ sh \
-  && up version \
-  && up upgrade
-
-RUN chown -R $(whoami) /usr/local/bin/
-
-ADD ./.env /.env
+ADD ./package.json /var/www/app/package.json
+ADD ./yarn.lock /var/www/app/yarn.lock
 
 ADD ./start.sh /start.sh
 
-ADD ./package.json /var/www/app/package.json
-
-ADD ./yarn.lock /var/www/app/yarn.lock
-
-WORKDIR /var/www/app/
-
-RUN yarn install && yarn cache clean
-
-RUN chmod +x /start.sh
+RUN sudo chmod +x /start.sh
 
 ENTRYPOINT ["/start.sh"]
