--- a/backend/package.json
+++ b/backend/package.json
@@ -1,57 +1,70 @@
 {
-	"name": "backend",
+	"name": "e-delivery-backend",
 	"version": "1.0.0",
-	"description": "store api",
 	"main": "index.js",
-	"author": "rfreites",
+	"repository": "git@github.com:rfreites/e-delivery-backend.git",
+	"author": "Ronny <ronnyangelo.freites@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "nodemon app-entry.js 4000",
-		"start": "node app-entry.js",
-		"deploy": "serverless deploy"
+		"start": "sls offline start",
+		"deploy": "sls deploy -v",
+		"flow": "flow",
+		"flow:watch": "flow-watch",
+		"lint": "eslint .",
+		"stylelint": "stylelint **/*.js",
+		"test": "echo \"testing\";"
 	},
 	"dependencies": {
-		"@babel/core": "7.4.0",
-		"@babel/node": "7.2.2",
-		"@babel/preset-env": "7.4.2",
-		"@babel/register": "7.4.0",
-		"apollo-server": "2.4.8",
-		"apollo-server-express": "2.4.8",
+		"@babel/core": "^7.4.3",
+		"@babel/node": "^7.2.2",
+		"@babel/preset-env": "^7.4.3",
+		"@babel/register": "^7.4.0",
+		"apollo-server": "^2.4.8",
+		"apollo-server-express": "^2.4.8",
 		"apollo-server-lambda": "^2.4.8",
 		"babel-loader": "^8.0.5",
-		"bcrypt": "3",
-		"body-parser": "1.18.3",
-		"cors": "2.8.5",
-		"dataloader": "1.4.0",
-		"dotenv": "7.0.0",
+		"bcrypt": "^3.0.5",
+		"body-parser": "^1.18.3",
+		"cors": "^2.8.5",
+		"dataloader": "^1.4.0",
+		"dotenv": "^7.0.0",
 		"express": "^4.16.4",
-		"graphql": "14.1.1",
-		"graphql-import": "0.7.1",
-		"graphql-iso-date": "3.6.1",
+		"graphql": "^14.2.1",
+		"graphql-import": "^0.7.1",
+		"graphql-iso-date": "^3.6.1",
 		"graphql-playground-middleware-express": "^1.7.12",
-		"graphql-resolvers": "0.3.2",
-		"graphql-tools": "4.0.4",
-		"http": "0.0.0",
-		"jsonwebtoken": "8.5.1",
-		"mariadb": "2.0.3",
-		"merge-graphql-schemas": "1.5.8",
-		"morgan": "1.9.1",
-		"mysql2": "^1.6.5",
-		"sequelize": "^5.2.8",
+		"graphql-resolvers": "^0.3.2",
+		"graphql-tools": "^4.0.4",
+		"jsonwebtoken": "^8.5.1",
+		"mariadb": "^2.0.3",
+		"merge-graphql-schemas": "^1.5.8",
+		"morgan": "^1.9.1",
+		"pg": "^7.9.0",
+		"sequelize": "^5.2.12",
 		"serverless": "^1.40.0",
 		"serverless-http": "^1.9.1",
-		"serverless-offline": "^4.9.2",
+		"serverless-offline": "^4.9.4",
 		"serverless-webpack": "^5.2.0",
-		"uuid": "3.3.2",
 		"webpack": "^4.29.6",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
-		"eslint": "5.15.3",
-		"eslint-config-airbnb": "17.1.0",
-		"eslint-config-airbnb-base": "13.1.0",
-		"eslint-plugin-import": "2.16.0",
-		"eslint-plugin-jsx-a11y": "6.2.1",
-		"mocha": "6.0.2"
+		"eslint": "^5.16.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-airbnb-base": "^13.1.0",
+		"eslint-plugin-import": "^2.16.0",
+		"mocha": "^6.0.2",
+		"serverless-dotenv-plugin": "^2.0.1"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.js": ["eslint --fix", "git add"]
 	}
 }
