--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,13 @@ services:
     volumes:
       - /var/www/app/node_modules
       - ./backend:/var/www/app
-      - ./backend/.env:/.env
     depends_on:
       - database
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     ports:
-      - 4000:3000
+      - 8000:3000
     # labels:
     #   - 'traefik.backend=backend-${DOMAIN}'
     #   - 'traefik.frontend.rule=Host:backend.${DOMAIN}.localhost'
