--- a/backend/package.json
+++ b/backend/package.json
@@ -49,15 +49,15 @@
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.0.1",
 		"eslint": "^5.16.0",
 		"eslint-config-airbnb": "^17.1.0",
 		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.12.4",
 		"mocha": "^6.0.2",
 		"serverless-dotenv-plugin": "^2.0.1"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
 	},
 	"husky": {
 		"hooks": {
@@ -65,6 +65,9 @@
 		}
 	},
 	"lint-staged": {
-		"*.js": ["eslint --fix", "git add"]
+		"*.js": [
+			"eslint --fix",
+			"git add"
+		]
 	}
 }
