--- a/backend/.env
+++ b/backend/.env
@@ -1,19 +1,24 @@
-NODE_ENV=production
-DB_HOST=database
+NODE_ENV=development
+# DB_HOST=database
+# DB_DATABASE=turing
+# DB_USER=turing
+# DB_PASSWORD=turing
+# DB_PORT=3306
+# DB_MACHINE=mariadb
+DB_HOST=turing.csbohpiehcaj.us-west-1.rds.amazonaws.com
 DB_DATABASE=turing
 DB_USER=turing
-DB_PASSWORD=turing
+DB_PASSWORD=turingdb
 DB_PORT=3306
 DB_MACHINE=mariadb
 SECRET=turing
-PORT=4000
-DEPLOY_DB_HOST=turing.ck8mlxute0zb.eu-west-1.rds.amazonaws.com
-DEPLOY_DB_DATABASE=dbturing
+DEPLOY_DB_HOST=turing.csbohpiehcaj.us-west-1.rds.amazonaws.com
+DEPLOY_DB_DATABASE=turing
 DEPLOY_DB_USER=turing
-DEPLOY_DB_PASSWORD=dbturing
+DEPLOY_DB_PASSWORD=turingdb
 DEPLOY_DB_PORT=3306
 SLS_DEBUG=*
-lambdaExecSecurityGroup=sg-1814856b
-subnetAPrivate=subnet-287b0060
-subnetBPrivate=subnet-cce45196
-subnetCPrivate=subnet-3987ef5f
+lambdaExecSecurityGroup=sg-079ef8dce4a18e875
+subnetAPrivate=subnet-0dd1990112ea045c9
+subnetBPrivate=subnet-02a605996d75d5bcf
+# subnetCPrivate=
