--- a/database/.env
+++ b/database/.env
@@ -3,8 +3,8 @@ DB_DATABASE=turing
 DB_USER=turing
 DB_PASSWORD=turing
 DB_PORT=3306
-DEPLOY_DB_HOST=turing.ck8mlxute0zb.eu-west-1.rds.amazonaws.com
-DEPLOY_DB_DATABASE=dbturing
+DEPLOY_DB_HOST=turing.csbohpiehcaj.us-west-1.rds.amazonaws.com
+DEPLOY_DB_DATABASE=turing
 DEPLOY_DB_USER=turing
-DEPLOY_DB_PASSWORD=dbturing
+DEPLOY_DB_PASSWORD=turingdb
 DEPLOY_DB_PORT=3306
