add build models job

--- a/backend/.env
+++ b/backend/.env
@@ -1,14 +1,8 @@
-NODE_ENV=development
-# DB_HOST=database
-# DB_DATABASE=turing
-# DB_USER=turing
-# DB_PASSWORD=turing
-# DB_PORT=3306
-# DB_MACHINE=mariadb
-DB_HOST=turing.csbohpiehcaj.us-west-1.rds.amazonaws.com
+NODE_ENV=staging
+DB_HOST=database
 DB_DATABASE=turing
 DB_USER=turing
-DB_PASSWORD=turingdb
+DB_PASSWORD=turing
 DB_PORT=3306
 DB_MACHINE=mariadb
 SECRET=turing
